# specify-cli

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  DIAGNOSTICS.md  Makefile  Makefile.toml  README.md  REVIEW.md  build.rs  clippy.toml  deny.toml  install.sh  rust-toolchain.toml  taplo.toml
crates/agents/: Cargo.toml
crates/agents/src/: fences.rs  fingerprint.rs  lib.rs  lock.rs  render.rs
crates/authoring/: Cargo.toml
crates/authoring/schemas/: codex-rule.schema.json  marketplace.schema.json  scenario.schema.json  skill.schema.json
crates/authoring/src/: check.rs  context.rs  exit.rs  finding.rs  helpers.rs  lib.rs  schema.rs
crates/authoring/tests/: check_adapter.rs  check_agent_teams.rs  check_brief.rs  check_codex.rs  check_codex_schema_drift.rs  check_docs_quality.rs  check_links.rs  check_plugins.rs  check_prose.rs  check_rules.rs  check_scenarios.rs  check_schema_links.rs  check_skill_body.rs  check_skill_frontmatter.rs  check_tools.rs  core_parity_adapter_briefs_cover_operations.rs  core_parity_adapter_briefs_equal_operations.rs  core_parity_adapter_manifest_version.rs  core_parity_adapter_schema.rs  core_parity_agent_teams_content_digest.rs  core_parity_links_unresolved.rs  core_parity_rule_namespace_owner.rs  core_parity_skill_body_line_count.rs  core_parity_skill_duplicate_name.rs
crates/capability/: Cargo.toml  README.md
crates/capability/src/: brief.rs  cache.rs  capability.rs  change_brief.rs  codex.rs  codex_resolver.rs  initiative_brief.rs  lib.rs  pipeline.rs  registry.rs  tests.rs
crates/change/: Cargo.toml
crates/change/src/: actions.rs  atomic.rs  finalize.rs  journal.rs  lib.rs  lock.rs  plan.rs  plan_doctor.rs  timestamp.rs
crates/codex/: Cargo.toml
crates/codex/src/: codex.rs  lib.rs  review.rs  rules.rs
crates/codex/tests/: codex_parse.rs  lint_diagnostics_compact.rs  lint_diagnostics_github.rs  lint_diagnostics_json.rs  lint_diagnostics_pretty.rs  lint_hint_path_pattern.rs  lint_hint_regex.rs  lint_hint_schema.rs  lint_hint_tool.rs  lint_indexer_consumer.rs  lint_model_round_trip.rs  review_diagnostics_compact.rs  review_diagnostics_github.rs  review_diagnostics_json.rs  review_diagnostics_pretty.rs  review_hint_path_pattern.rs  review_hint_regex.rs  review_hint_schema.rs  review_hint_tool.rs  review_indexer_consumer.rs  review_model_round_trip.rs
crates/config/: Cargo.toml
crates/config/src/: atomic.rs  lib.rs
crates/contract/: Cargo.toml
crates/contract-validate/: Cargo.toml
crates/contract-validate/src/: main.rs
crates/contract-validate/tests/: cli.rs
crates/contract/src/: main.rs
crates/contract/tests/: cli.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: diagnostic.rs  fingerprint.rs  lib.rs  render.rs  test_support.rs  validate.rs
crates/digest/: Cargo.toml
crates/digest/src/: hash.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: adapter.rs  capability.rs  change.rs  cmd.rs  codex.rs  config.rs  design_system.rs  discovery.rs  evidence.rs  init.rs  journal.rs  lib.rs  macros.rs  merge.rs  plugin.rs  registry.rs  schema.rs  serde_helpers.rs  serde_rfc3339.rs  slice.rs  spec.rs  survey.rs  task.rs  validate.rs
crates/domain/tests/: adapter.rs  capability.rs  codex_parse.rs  detectors_bullmq.rs  detectors_express.rs  detectors_nestjs.rs  finalize.rs  goldens.rs  merge_slice.rs  parity.rs  plugin.rs  registry.rs  runner.rs  schemas.rs  sources.rs  survey.rs  survey_ingest.rs  workspace.rs
crates/drift/: Cargo.toml
crates/drift/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: codes.rs  display.rs  error.rs  lib.rs  serde_path_display.rs  serde_rfc3339.rs  serde_rfc3339_opt.rs  validation.rs  yaml.rs
crates/extension-manifest/: Cargo.toml
crates/extension-manifest/src/: lib.rs  validate.rs
crates/federation/: Cargo.toml
crates/federation/src/: lib.rs
crates/init/: Cargo.toml
crates/init/src/: cache.rs  capability_uri.rs  git.rs  hub.rs  lib.rs  regular.rs
crates/initiative/: Cargo.toml
crates/initiative/src/: finalize.rs  lib.rs
crates/merge/: Cargo.toml
crates/merge/src/: artifact_class.rs  change.rs  composition.rs  lib.rs  merge.rs  slice.rs  validate.rs
crates/merge/tests/: merge_change.rs  merge_slice.rs  parity.rs
crates/model/: Cargo.toml
crates/model/src/: atomic.rs  decision.rs  discovery.rs  evidence.rs  lib.rs  spec.rs  task.rs  validate.rs
crates/model/tests/: atomic.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: branch.rs  cache.rs  error.rs  forge.rs  gitignore.rs  host.rs  lib.rs  load.rs  merge.rs  oci.rs  pack.rs  package.rs  permissions.rs  registry.rs  resolver.rs  store.rs  validate.rs  workspace.rs
crates/registry/tests/: registry.rs  workspace.rs
crates/schema/: Cargo.toml  README.md
crates/schema/src/: brief.rs  cache.rs  constants.rs  digest.rs  initiative_brief.rs  lib.rs  pipeline.rs  registry.rs  schema.rs  tests.rs  validate.rs
crates/schema/tests/: schemas.rs  wire_fixtures.rs
crates/slice/: Cargo.toml
crates/slice/src/: actions.rs  atomic.rs  journal.rs  lib.rs  lifecycle.rs  metadata.rs  outcome.rs  timestamp.rs
crates/spec/: Cargo.toml  README.md
crates/spec/src/: lib.rs  tests.rs
crates/specify-lints/: Cargo.toml
crates/specify-lints/src/: lib.rs  lint.rs  rules.rs
crates/specify-lints/tests/: lint_diagnostics_compact.rs  lint_diagnostics_github.rs  (+12 more)
crates/standards/: Cargo.toml
crates/task/: Cargo.toml  README.md
wasi-tools/: Cargo.toml
wasi-tools/adapter/: Cargo.toml
wasi-tools/agent-teams/: Cargo.toml
wasi-tools/contract/: Cargo.toml
wasi-tools/framework-wire/: Cargo.toml
wasi-tools/links-registry/: Cargo.toml
wasi-tools/marketplace/: Cargo.toml
wasi-tools/prose/: Cargo.toml
wasi-tools/rules/: Cargo.toml
wasi-tools/scenarios/: Cargo.toml
wasi-tools/skill/: Cargo.toml
wasi-tools/skill-body/: Cargo.toml
wasi-tools/vectis/: Cargo.toml  DECISIONS.md  build.rs
xtask/: Cargo.toml
xtask/src/: completions.rs  main.rs  manpage.rs  standards.rs
(+1929 files in other folders)
