[package]
name = "specify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Specify CLI — deterministic operations for spec-driven development"
categories = ["command-line-utilities", "development-tools"]
keywords = ["specify", "cli", "spec", "workflow", "rfc"]
readme = "README.md"

[[bin]]
name = "specify"
path = "src/main.rs"

[lib]
name = "specify"
path = "src/lib.rs"

[dependencies]
specify-error.workspace = true
specify-schema.workspace = true
specify-spec.workspace = true
specify-merge.workspace = true
specify-task.workspace = true
specify-change.workspace = true
specify-validate.workspace = true
specify-vectis.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
semver.workspace = true
chrono.workspace = true
glob.workspace = true

[dev-dependencies]
assert_cmd = "2"
tempfile.workspace = true
regex.workspace = true
jsonschema.workspace = true

[lints]
workspace = true

[workspace]
members = [
    "crates/error",
    "crates/schema",
    "crates/spec",
    "crates/merge",
    "crates/task",
    "crates/validate",
    "crates/change",
    "crates/vectis",
]

[workspace.package]
authors = ["Augentic"]
edition = "2024"
homepage = "https://augentic.io"
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/specify-cli"
rust-version = "1.93"
version = "0.2.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
cargo = "warn"
nursery = "warn"
pedantic = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
specify-error = { path = "crates/error" }
specify-schema = { path = "crates/schema" }
specify-spec = { path = "crates/spec" }
specify-merge = { path = "crates/merge" }
specify-task = { path = "crates/task" }
specify-change = { path = "crates/change" }
specify-validate = { path = "crates/validate" }
specify-vectis = { path = "crates/vectis" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.25"
serde_json = "1"
regex = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = { version = "0.46", default-features = false }
semver = "1"
tempfile = "3"

[profile.release]
lto = true
opt-level = 2
strip = true
