[package]
name = "specify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Specify CLI — deterministic operations for spec-driven development"
categories = ["command-line-utilities", "development-tools"]
keywords = ["specify", "cli", "spec", "workflow", "rfc"]
readme = "README.md"

[[bin]]
name = "specify"
path = "src/main.rs"

[dependencies]
specify-error.workspace = true
specify-domain.workspace = true
specify-tool = { workspace = true, features = ["host"] }
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
sha2.workspace = true
semver.workspace = true
chrono.workspace = true
glob.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
regex.workspace = true
jsonschema.workspace = true
sha2.workspace = true

[lints]
workspace = true

[workspace]
members = [
    "crates/error",
    "crates/domain",
    "crates/tool",
    "xtask",
]
# `wasi-tools/` is a sibling workspace (`specify-contract` and `specify-vectis`
# ship as standalone `wasm32-wasip2` components and stay out of the host CLI's
# Render/emit/`specify-error` discipline). Listing the directory under
# `exclude` keeps cargo from recursing into it from this workspace; cargo
# still stops at its own `[workspace]` declaration without this, but the
# explicit entry documents the boundary.
exclude = ["wasi-tools"]

# `xtask` is a workspace-internal task runner (`cargo run -p xtask -- ...`)
# rather than a library or published binary.

[workspace.package]
authors = ["Augentic"]
edition = "2024"
homepage = "https://augentic.io"
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/specify-cli"
rust-version = "1.93"
version = "0.3.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
missing_debug_implementations = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
# Negative priorities let individual lint overrides below the group take
# effect (the lint-table "lints with higher priority are applied later"
# rule — see https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section).
all = { level = "warn", priority = -1 }      # correctness, suspicious, style, complexity, perf
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# `clippy::redundant_pub_crate` (nursery) tells you to drop `pub(crate)` on
# items inside a private module. `unreachable_pub` (rustc) tells you the
# opposite — promote `pub` to `pub(crate)` whenever the item is not
# externally reachable. We keep `unreachable_pub` (it catches accidentally
# leaky exports across the workspace) and silence the nursery rule.
redundant_pub_crate = "allow"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
specify-error = { path = "crates/error" }
specify-domain = { path = "crates/domain" }
specify-tool = { path = "crates/tool" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.25"
serde_json = "1"
regex = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonschema = { version = "0.46", default-features = false }
semver = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "fs", "io-util"] }
toml = "1"
sha2 = "0.10"
ureq = { version = "3", features = ["json"] }
wasm-pkg-client = "0.15"
wasmtime = { version = "44.0.1", default-features = false, features = ["component-model", "runtime", "cranelift"] }
wasmtime-wasi = { version = "44.0.1", default-features = false, features = ["p2"] }
assert_cmd = "2"
libc = "0.2"
petgraph = "0.8"

[profile.release]
lto = true
opt-level = 2
strip = true
