[package]
name = "specify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Specify CLI — deterministic operations for spec-driven development"
categories = ["command-line-utilities", "development-tools"]
keywords = ["specify", "cli", "spec", "workflow", "rfc"]
readme = "README.md"

[[bin]]
name = "specify"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
glob.workspace = true
jiff.workspace = true
semver.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
sha2.workspace = true
specify-domain.workspace = true
specify-error.workspace = true
specify-tool.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
jsonschema.workspace = true
regex.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[workspace]
members = [
    "crates/error",
    "crates/domain",
    "crates/tool",
    "xtask",
]

# `xtask` is a workspace-internal task runner (`cargo run -p xtask -- ...`)
# rather than a library or published binary.

[workspace.package]
authors = ["Augentic"]
edition = "2024"
homepage = "https://augentic.io"
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/specify-cli"
rust-version = "1.95"
version = "0.3.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
# Groups carry priority = -1 so individual lints below can override them.
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# The `cargo` group's `multiple_crate_versions` lint is the wrong signal in a
# workspace this size: transitive duplicates accrete from upstream crates we do
# not control (windows-sys generations, wasmparser/wit-* cycles, rand v0.8/0.9),
# and the ratchet allowlist that used to live in `clippy.toml` grew without ever
# shrinking. A quarterly `cargo tree --duplicates` audit is the cheaper signal.
multiple_crate_versions = "allow"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
map_err_ignore = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
non_zero_suggestions = "warn"
partial_pub_fields = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
semicolon_outside_block = "warn"
string_add = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"

# Recommended-but-skipped restriction lints with rationale:
# - `tests_outside_test_module`: fires on every integration test in `tests/*.rs`
#   (by construction, integration tests are top-level fns in their own crate
#   and cannot be inside `#[cfg(test)] mod tests`).
# - `str_to_string` / `string_to_string`: opinionated against `.to_string()` on
#   `&str`; `string_to_string` was also removed from clippy in 1.95 in favour of
#   `clippy::implicit_clone`.
# - `field_scoped_visibility_modifiers`: the workspace deliberately uses
#   `pub(crate)` / `pub(super)` on struct fields throughout.

[workspace.dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
futures-util = "0.3"
glob = "0.3"
jiff = { version = "0.2", default-features = false, features = ["serde", "std"] }
jsonschema = { version = "0.46", default-features = false }
libc = "0.2"
petgraph = "0.8"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.25"
serde_json = "1"
sha2 = "0.10"
specify-domain = { path = "crates/domain" }
specify-error = { path = "crates/error" }
specify-tool = { path = "crates/tool" }
strum = { version = "0.28", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
ureq = { version = "3", features = ["json"] }
wasm-pkg-client = "0.15"
wasmtime = { version = "44.0.1", default-features = false, features = ["component-model", "cranelift", "runtime"] }
wasmtime-wasi = { version = "44.0.1", default-features = false, features = ["p2"] }

[profile.release]
lto = true
opt-level = 2
strip = true
