[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Workspace task runner: gen-man and gen-completions"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen = "0.3"
# Pulled in for the `gen-man` and `gen-completions` subcommands: xtask
# reflects the binary's clap command tree via `specify::command()` and
# renders roff (`clap_mangen`) and shell completions (`clap_complete`).
specify = { path = ".." }

[lints.rust]
missing_docs = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# xtask is workspace-internal; cargo metadata lints don't apply.
cargo = "allow"
