[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Workspace task runner: gen-man and gen-completions"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen = "0.3"
# Pulled in for the `gen-man` and `gen-completions` subcommands: xtask
# reflects the binary's clap command tree via `specify::command()` and
# renders roff (`clap_mangen`) and shell completions (`clap_complete`).
specify = { path = ".." }

# Inherit workspace lints. The two xtask-specific relaxations
# (`missing_docs`, `clippy::cargo`) live as crate-level `#![allow(...)]`
# attributes in `src/main.rs` rather than package-level `[lints.*]` tables —
# Even Better TOML 0.21.2 ships a stale Cargo schema that fails to validate
# package-level lint tables (rust-lang/cargo#15030, fixed upstream in
# rust-lang/cargo#15035 but not yet in the bundled schema).
[lints]
workspace = true
