[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Workspace task runner: gen-man"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen = "0.3"
# Pulled in for the `gen-man` subcommand: xtask reflects the binary's
# clap command tree via `specify::command()` and renders roff
# (`clap_mangen`).
specify = { path = ".." }

[lints]
workspace = true
