[package]
name = "specify-authoring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Framework authoring checks for augentic/specify"
publish = false

[dependencies]
glob.workspace = true
jsonschema.workspace = true
regex.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
sha2.workspace = true
specify-codex.workspace = true
specify-error.workspace = true
specify-schema.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
