[package]
name = "specify-capability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability resolution, brief frontmatter, and PipelineView for Specify"
categories = ["development-tools"]
keywords = ["specify", "capability", "pipeline"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
specify-error.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
glob.workspace = true
# `derive` pulls `clap_derive` for `#[derive(ValueEnum)]` on `Phase`
# so the binary can consume it directly as a `#[arg(value_enum)]`
# without a wrapper enum.
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
