[package]
name = "specify-change"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Change-metadata lifecycle state machine for Specify"
categories = ["development-tools"]
keywords = ["specify", "change", "lifecycle"]

[dependencies]
specify-error.workspace = true
specify-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
tempfile.workspace = true
petgraph = "0.8"
fs2 = "0.4"
glob = "0.3"
# `derive` pulls `clap_derive` for `#[derive(ValueEnum)]` on
# library-exported enums (`PlanStatus`, `LifecycleStatus`, `Outcome`,
# `EntryKind`).
clap.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
