[package]
name = "specify-change"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Specify change orchestration: change brief, plan, execution, finalization"
categories = ["development-tools"]
keywords = ["specify", "change", "plan", "orchestration"]
readme = "../../README.md"

[dependencies]
specify-error.workspace = true
specify-config.workspace = true
specify-registry.workspace = true
specify-slice.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
chrono.workspace = true
petgraph.workspace = true
fs2.workspace = true
# `derive` pulls `clap_derive` for `#[derive(ValueEnum)]` on the
# `Status` enum that the binary's CLI args parse into.
clap.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
