[package]
name = "specify-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Specify neutral diagnostic substrate: the Diagnostic currency, fingerprint algorithm, validators, and renderers shared by the lint and validate surfaces"
categories = ["development-tools"]
keywords = ["specify", "diagnostic", "lint"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
specify-error.workspace = true
specify-schema.workspace = true
specify-digest.workspace = true
thiserror.workspace = true
