[package]
name = "specify-digest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SHA-256 digest encoding shared across Specify workspace crates"
categories = ["development-tools"]
keywords = ["specify", "digest", "sha256"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
base16ct.workspace = true
sha2.workspace = true
