[package]
name = "specify-error"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified error types for the Specify CLI"
categories = ["development-tools"]
keywords = ["specify", "errors"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
