[package]
name = "specify-tool-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Specify WASI tool manifest DTOs and structural validation (wasmtime-free leaf)"
categories = ["development-tools"]
keywords = ["specify", "tools", "wasi", "manifest"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
semver.workspace = true
serde.workspace = true
specify-diagnostics.workspace = true
specify-schema.workspace = true
strum.workspace = true

[dev-dependencies]
jsonschema.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
