[package]
name = "specify-init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "`specify init` orchestrator: scaffolds .specify/, resolves the capability cache, writes project.yaml"
categories = ["development-tools"]
keywords = ["specify", "init"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
specify-capability.workspace = true
specify-config.workspace = true
specify-error.workspace = true
specify-registry.workspace = true
chrono.workspace = true
serde-saphyr.workspace = true

[dev-dependencies]
tempfile.workspace = true
