[package]
name = "specify-initiative"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Specify initiative orchestration: change brief, plan, execution, finalization"
categories = ["development-tools"]
keywords = ["specify", "initiative", "plan", "orchestration"]
readme = "../../README.md"

[lib]
name = "specify_initiative"
path = "src/lib.rs"

[dependencies]
specify-error.workspace = true
specify-registry.workspace = true
specify-slice.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
chrono.workspace = true
petgraph = "0.8"
fs2 = "0.4"
# `derive` pulls `clap_derive` for `#[derive(ValueEnum)]` on the
# `Status` enum that the binary's CLI args parse into.
clap.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true

[lints]
workspace = true
