[package]
name = "specify-merge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic delta-merge engine for Specify"
categories = ["development-tools"]
keywords = ["specify", "merge", "delta"]

[dependencies]
specify-error.workspace = true
specify-spec.workspace = true
specify-schema.workspace = true
specify-change.workspace = true
glob.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
regex.workspace = true

