[package]
name = "specify-merge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic delta-merge engine for Specify"
readme = "../../README.md"
categories = ["development-tools"]
keywords = ["specify", "merge", "delta"]

[lints]
workspace = true

[dependencies]
specify-error.workspace = true
specify-spec.workspace = true
specify-capability.workspace = true
specify-slice.workspace = true
chrono.workspace = true
regex.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
regex.workspace = true

