[package]
name = "specify-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-repo coordination scaffolding for Specify (RFC-3, stubbed)"
categories = ["development-tools"]
keywords = ["specify", "platform", "rfc3"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde-saphyr.workspace = true
