[package]
name = "specify-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema resolution, brief frontmatter, and PipelineView for Specify"
categories = ["development-tools"]
keywords = ["specify", "schema", "pipeline"]

[dependencies]
specify-error.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
glob.workspace = true
# `derive` pulls `clap_derive` for `#[derive(ValueEnum)]` on `Phase`
# so the binary can consume it directly as a `#[arg(value_enum)]`
# without a wrapper enum.
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
