[package]
name = "specify-slice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Change-metadata lifecycle state machine for Specify"
categories = ["development-tools"]
keywords = ["specify", "change", "lifecycle"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
specify-error.workspace = true
specify-capability.workspace = true
specify-registry.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
chrono.workspace = true
tempfile.workspace = true
petgraph = "0.8"
fs2 = "0.4"
# `derive` pulls `clap_derive` for `#[derive(ValueEnum)]` on
# library-exported enums (`PlanStatus`, `LifecycleStatus`, `Outcome`,
# `EntryKind`).
clap.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
