[package]
name = "specify-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Spec-format parser (baseline + delta) for Specify"
categories = ["development-tools", "parser-implementations"]
keywords = ["specify", "spec", "parser"]

[lints]
workspace = true

[dependencies]
specify-error.workspace = true
regex.workspace = true
